--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,4 @@
 buildscript {
-    ext.kotlin_version = '1.3.41'
-
     ext {
         // Sdk and tools
         compileSdkVersion = 29
@@ -13,10 +11,10 @@ buildscript {
         coroutinesVersion = "1.1.1"
         espressoVersion = '3.1.0-alpha4'
         glideVersion = '4.9.0'
-        gradleVersion = '3.4.2'
+        gradleVersion = '3.5.0'
         gsonVersion = '2.8.2'
         junitVersion = '4.12'
-        kotlinVersion = '1.3.21'
+        kotlinVersion = '1.3.41'
         ktlintVersion = '0.30.0'
         ktxVersion = '1.0.2'
         lifecycleVersion = '2.2.0-alpha03'
@@ -46,13 +44,14 @@ buildscript {
         classpath "com.android.tools.build:gradle:$gradleVersion"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
         classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:$navigationVersion"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version" }
+    }
 }
 
 allprojects {
     repositories {
         google()
         jcenter()
+        mavenCentral()
         maven { url 'https://dl.bintray.com/kotlin/kotlin-eap' }
         maven { url 'https://jitpack.io' }
     }
