--- a/level_3/src/main/AndroidManifest.xml
+++ b/level_3/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <application
-        android:name="com.cxyzy.demo.App"
+        android:name=".App"
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -15,7 +15,7 @@
         tools:ignore="GoogleAppIndexingWarning"
         tools:targetApi="n">
 
-        <activity android:name="com.cxyzy.demo.ui.activity.DailyWeatherActivity">
+        <activity android:name=".ui.activity.DailyWeatherActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
