--- a/build.gradle
+++ b/build.gradle
@@ -16,14 +16,14 @@ buildscript {
         junitVersion = '4.12'
         kotlinVersion = '1.3.50'
         ktlintVersion = '0.30.0'
-        ktxVersion = '1.0.2'
+        ktxVersion = '1.1.0'
         lifecycleVersion = '2.2.0-alpha03'
         materialVersion = '1.0.0'
         navigationVersion = '1.0.0'
         recyclerViewVersion = '1.1.0-beta02'
         roomVersion = '2.2.0-alpha02'
         runnerVersion = '1.0.1'
-        supportLibraryVersion = '1.1.0-rc01'
+        supportLibraryVersion = '1.1.0'
         uiAutomatorVersion = '2.2.0'
         workVersion = '1.0.1'
         pagingVersion = '2.1.0'
